syntax = "proto3";
package auction.v1;

import "gogoproto/gogo.proto";
import "auction/v1/params.proto";

option go_package = "github.com/Gravity-Bridge/Gravity-Bridge/module/x/auction/types";

// GenesisState defines the auction module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
}
